--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@ layout: compress
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-{% if post.title %}
-<title>{{ post.title }}</title>
+{% if site.subtitle %}
+<title>{{ site.subtitle }}</title>
 {% elseif %}
 <title>{{ site.title }}</title>
 {% endif %}
