--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@ layout: compress
     <header class="header">
         <h1> {{ site.title }} <span> {{ site.description }} </span></h1>
         <nav class="links">
-            <a href="#"><i class="fa fa-twitter-square fa-3x"></i></a>
-            <a href="#"><i class="fa fa-instagram fa-3x"></i></a>
-            <a href="#"><i class="fa fa-facebook-square fa-3x"></i></a>
-            <a href="#"><i class="fa fa-tumblr-square fa-3x"></i></a>
+            <!-- <a href="#"><i class="fa fa-twitter-square fa-3x"></i></a> -->
+            <a href="https://www.instagram.com/linjie.ml"><i class="fa fa-instagram fa-3x"></i></a>
+            <!-- <a href="#"><i class="fa fa-facebook-square fa-3x"></i></a>
+            <a href="#"><i class="fa fa-tumblr-square fa-3x"></i></a> -->
         </nav>
     </header>
     <div class="content">
